syntax = "proto3";

package com.cognite.beam.proto;

import "google/protobuf/wrappers.proto";

option java_package = "com.cognite.client.dto";
option java_multiple_files = true;
option java_outer_classname = "PnIDResponseOuter";

message BoundingBox {
    double xMax = 1;
    double xMin = 2;
    double yMax = 3;
    double yMin = 4;
}

message Entity {
     BoundingBox boundingBox = 1;
     google.protobuf.StringValue text = 2;
     google.protobuf.DoubleValue confidence = 3;
     google.protobuf.StringValue type = 4;
}

message PnIDResponse {
    // The id of the source file used for detecting annotations and building
    // interactive P&ID
    int64 file_id = 1;

    // The identified entity annotations with bounding boxes
    repeated Entity entities = 2;

    // The URL for the converted SVG file
    google.protobuf.StringValue svg_url = 3;

    // The URL for the converted PNG file
    google.protobuf.StringValue png_url = 4;

    // The converted SVG binary
    google.protobuf.BytesValue svg_binary = 5;

    // The converted PNG binary
    google.protobuf.BytesValue png_binary = 6;
}

